# CPPTools

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  cpptools.cpp  cpptools.h  get_code_cov.sh
.github/workflows/: ccpp.yml
demo/: callback.cpp  caller.cpp  cppcli.cpp
misc/: CppMapTools.cpp  partials.cpp
src/: callback.h  caller.cpp  caller.h  cppcli.h  cppenv.h  function.h  inplace_wrapper.h  router.h  string.h  tuple.h
src/string/: base.h  conversion.h  strip.h
tests/: CMakeLists.txt  caller.cpp  cppenv.cpp  cpprouter.cpp  main.cpp  string.cpp  tuple.cpp
